[0.4.14][UXTHEME][NTUSER] Improve Themed Scrollbars (#3868) (#3953)

Squashed backport of:
0.4.15-dev-3086-g 236649c626f97c68a9d0a6709a1bb342681b2aa0 (#3868) and
0.4.15-dev-3147-g 3bf7e3ac13c5c9df373827c102b763b5b9822204 (#3953)

to fix some regressions for themed scrollbars that were introduced by
0.4.14-dev-1134-g 00adb1a3f967ac7f5cd56b4c39df72a7b3814603

fixes all or most parts of CORE-16735 without introducing CORE-17754 and CORE-17755