win32ss/user/ntuser/scrollbar.c
@@ -276,6 +276,7 @@ co_IntGetScrollInfo(PWND Window, INT nBar, PSBDATA pSBData, LPSCROLLINFO lpsi)
 
    ASSERT_REFS_CO(Window);
 
+   lpsi->fMask &= ~SIF_THEMED;    // Remove Theme bit
    if(!SBID_IS_VALID(nBar))
    {
       EngSetLastError(ERROR_INVALID_PARAMETER);
@@ -334,6 +335,7 @@ NEWco_IntGetScrollInfo(
   UINT Mask;
   PSBTRACK pSBTrack = pWnd->head.pti->pSBTrack;
 
+  lpsi->fMask &= ~SIF_THEMED;         // Remove Theme bit
   if (!SBID_IS_VALID(nBar))
   {
      EngSetLastError(ERROR_INVALID_PARAMETER);
@@ -486,10 +488,13 @@ co_IntSetScrollInfo(PWND Window, INT nBar, LPCSCROLLINFO lpsi, BOOL bRedraw)
    UINT new_flags;
    INT action = 0;
    PSBDATA pSBData;
-   DWORD OldPos = 0;
+   DWORD OldPos = 0, CurrentPos = 0;
    BOOL bChangeParams = FALSE; /* Don't show/hide scrollbar if params don't change */
    UINT MaxPage;
    int MaxPos;
+   /* [0] = HORZ, [1] = VERT */
+   static PWND PrevHwnd[2] = { 0 };
+   static DWORD PrevPos[2] = { 0 };
 
    ASSERT_REFS_CO(Window);
 
@@ -511,7 +516,7 @@ co_IntSetScrollInfo(PWND Window, INT nBar, LPCSCROLLINFO lpsi, BOOL bRedraw)
       EngSetLastError(ERROR_INVALID_PARAMETER);
       return 0;
    }
-   if (lpsi->fMask & ~(SIF_ALL | SIF_DISABLENOSCROLL | SIF_PREVIOUSPOS))
+   if ((lpsi->fMask & ~SIF_THEMED) & ~(SIF_ALL | SIF_DISABLENOSCROLL | SIF_PREVIOUSPOS))
    {
       EngSetLastError(ERROR_INVALID_PARAMETER);
       return 0;
@@ -611,7 +616,7 @@ co_IntSetScrollInfo(PWND Window, INT nBar, LPCSCROLLINFO lpsi, BOOL bRedraw)
          }
       }
       else /* Show and enable scroll-bar only if no page only changed. */
-      if (lpsi->fMask != SIF_PAGE)
+      if ((lpsi->fMask & ~SIF_THEMED) != SIF_PAGE)
       {
          if ((nBar != SB_CTL) && bChangeParams)
          {
@@ -643,19 +648,55 @@ co_IntSetScrollInfo(PWND Window, INT nBar, LPCSCROLLINFO lpsi, BOOL bRedraw)
             return lpsi->fMask & SIF_PREVIOUSPOS ? OldPos : pSBData->pos; /* SetWindowPos() already did the painting */
       if (bRedraw)
       {
-         if (action & SA_SSI_REPAINT_ARROWS)
-         {  // Redraw the entire bar.
+         if (!(lpsi->fMask & SIF_THEMED)) /* Not Using Themes */
+         {
+            TRACE("Not using themes.\n");
+            if (action & SA_SSI_REPAINT_ARROWS)
+            {
+               // Redraw the entire bar.
+               RECTL UpdateRect = psbi->rcScrollBar;
+               UpdateRect.left -= Window->rcClient.left - Window->rcWindow.left;
+               UpdateRect.right -= Window->rcClient.left - Window->rcWindow.left;
+               UpdateRect.top -= Window->rcClient.top - Window->rcWindow.top;
+               UpdateRect.bottom -= Window->rcClient.top - Window->rcWindow.top;
+               co_UserRedrawWindow(Window, &UpdateRect, 0, RDW_INVALIDATE | RDW_FRAME);
+            }
+            else
+            {
+               // Redraw only the interior part of the bar.
+               IntRefeshScrollInterior(Window, nBar, psbi);
+            }
+         }
+         else  /* Using Themes */
+         {
             RECTL UpdateRect = psbi->rcScrollBar;
+            TRACE("Using themes.\n");
             UpdateRect.left -= Window->rcClient.left - Window->rcWindow.left;
             UpdateRect.right -= Window->rcClient.left - Window->rcWindow.left;
             UpdateRect.top -= Window->rcClient.top - Window->rcWindow.top;
             UpdateRect.bottom -= Window->rcClient.top - Window->rcWindow.top;
-            co_UserRedrawWindow(Window, &UpdateRect, 0, RDW_INVALIDATE | RDW_FRAME);
-         }
-         else
-         {
-            // Redraw only the interior part of the bar.
-            IntRefeshScrollInterior(Window, nBar, psbi);
+            /* Just paint the interior and not the arrows. */
+            if (!(action & SA_SSI_REPAINT_ARROWS))
+            {
+               if (nBar == SB_HORZ)
+               {
+                  UpdateRect.left += psbi->dxyLineButton;
+                  UpdateRect.right -= psbi->dxyLineButton;
+               }
+               if (nBar == SB_VERT)
+               {
+                  UpdateRect.top += psbi->dxyLineButton;
+                  UpdateRect.bottom -= psbi->dxyLineButton;
+               }
+            }
+            CurrentPos = lpsi->fMask & SIF_PREVIOUSPOS ? OldPos : pSBData->pos;
+            /* Check for changes to Window or CurrentPos */
+            if ((Window != PrevHwnd[nBar]) || (CurrentPos != PrevPos[nBar]))
+            {
+                co_UserRedrawWindow(Window, &UpdateRect, 0, RDW_INVALIDATE | RDW_FRAME);
+                PrevHwnd[nBar] = Window;
+                PrevPos[nBar] = CurrentPos;
+            }
          }
       } // FIXME: Arrows
 /*      else if( action & SA_SSI_REPAINT_ARROWS )
